--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-theme: midnight
-title: My Awesome GitHub Pages Site
-description: This is a description of my site.
+theme: jekyll-theme-midnight
+title: RPG Characters
+description: saskwotch's RPG Characters
 markdown: kramdown
 
 kramdown:
